--- a/head.html
+++ b/head.html
@@ -40,7 +40,7 @@
 
             <header class="main-header">
                 <!-- Logo -->
-                <a href="index.html" class="logo">
+                <a href="index.php" class="logo">
                     <!-- mini logo for sidebar mini 50x50 pixels -->
                     <span class="logo-mini"><b>Sis</b>FAC</span>
                     <!-- logo for regular state and mobile devices -->
