--- a/head.html
+++ b/head.html
@@ -55,9 +55,18 @@
 
                     <div class="navbar-custom-menu">
                         <ul class="nav navbar-nav">                         
-                            <!-- User Account: style can be found in dropdown.less -->
+                            <!-- User Account: style can be found in dropdown.less -->  
+                            <li class="dropdown messages-menu">
+                                <a href=""><i class="fa fa-home"></i> Inicio</a>   
+<!--                                <ol class="breadcrumb">
+                                    <li style="font-size: ">
+                                        <a href=""><i class="fa fa-home"></i> Inicio</a>
+                                    </li>
+                                </ol>-->
+                            </li>
                             <li class="dropdown user user-menu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" style=" text-decoration: none !important; height: 100%;">
+                                    <?php echo $nombre ?>
                                     <img src="dist/img/avatar5.jpg" class="user-image" alt="User Image">
                                     <span class="hidden-xs"></span>
                                     <br>
