--- a/head.html
+++ b/head.html
@@ -84,7 +84,7 @@
                                     <!-- Menu Footer-->
                                     <li class="user-footer">                                     
                                         <div class="text-center">
-                                            <a href="#" class="btn btn-success btn-flat">Cerrar sesión</a>
+                                            <a href="<?php echo BASE_URL ?>" class="btn btn-success btn-flat">Cerrar sesión</a>
                                         </div>
                                     </li>
                                 </ul>
