--- a/head.html
+++ b/head.html
@@ -32,6 +32,21 @@
 
         <!-- Google Font -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+        <style>
+            select{
+                text-align-last: center !important;
+                text-align: center !important;
+            }
+            thead{
+                background-color: #1C4773 !important;
+                color: white;                
+            }
+            th{
+                text-align: center;  
+                border-radius: 4px;
+            }  
+            tbody>tr:hover{background-color: #FFF5CA !important}
+        </style>
     </head>
     <body class="hold-transition skin-blue sidebar-mini" style="background-color: #323C48">
         <div class="text-center">
