--- a/head.html
+++ b/head.html
@@ -93,8 +93,8 @@
                                         <img src="<?php echo BASE_URL;?>dist/img/avatar5.jpg" class="img-circle" alt="User Image">
 
                                         <p>
-                                            <?php echo $nombre.' '.$Apep.' '.$ApeM ?> - Web Developer
-                                            <small>Member since Nov. 2012</small>
+                                            <?php echo $nombre ?> - Sector: <?php echo $sec ?> - Destto:  <?php echo $dest?>
+                                            <!--<small>Member since Nov. 2012</small>-->
                                         </p>
                                     </li>                                    
                                     <!-- Menu Footer-->
