--- a/head.html
+++ b/head.html
@@ -73,7 +73,7 @@
                         <ul class="nav navbar-nav">                         
                             <!-- User Account: style can be found in dropdown.less -->  
                             <li class="dropdown messages-menu">
-                                <a href=""><i class="fa fa-home"></i> Inicio</a>   
+                                <a href="<?php echo BASE_URL?>index.php"><i class="fa fa-home"></i> Inicio</a>   
 <!--                                <ol class="breadcrumb">
                                     <li style="font-size: ">
                                         <a href=""><i class="fa fa-home"></i> Inicio</a>
