--- a/footer.html
+++ b/footer.html
@@ -28,8 +28,10 @@
         <!-- daterangepicker -->
         <script src="<?php echo BASE_URL;?>bower_components/moment/min/moment.min.js"></script>
         <script src="<?php echo BASE_URL;?>bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+        <!--<script src="<?php echo BASE_URL;?>bower_components/datatables.net/js/jquery.dataTables.min.js"></script>-->
+        <script src="<?php echo BASE_URL;?>bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
         <!-- datepicker -->
-        <script src="<?php echo BASE_URL;?>bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+        <script src="<?php echo BASE_URL;?>bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>        
         <!-- Bootstrap WYSIHTML5 -->
         <script src="<?php echo BASE_URL;?>plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
         <!-- Slimscroll -->
