--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,9 @@
 
         <!-- jQuery 3 -->
         <script src="<?php echo BASE_URL;?>bower_components/jquery/dist/jquery.min.js"></script>
+
+        <!-- jQuery 3 -->
+        <script src="<?php echo BASE_URL;?>bower_components/select2/dist/js/select2.min.js"></script>
         <!-- jQuery UI 1.11.4 -->
         <script src="<?php echo BASE_URL;?>bower_components/jquery-ui/jquery-ui.min.js"></script>
         <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
