--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,7 @@
 
         <!-- jQuery 3 -->
         <script src="<?php echo BASE_URL;?>bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="<?php echo BASE_URL;?>bower_components/jquery/dist/jquery.mask.min.js"></script>
 
         <!-- jQuery 3 -->
         <script src="<?php echo BASE_URL;?>bower_components/select2/dist/js/select2.min.js"></script>
