--- a/head.html
+++ b/head.html
@@ -48,6 +48,10 @@
                 border-radius: 4px;
             }  
             tbody>tr:hover{background-color: #FFF5CA !important}
+             td{
+                text-align: center !important; 
+                vertical-align: middle !important;
+            }
         </style>
     </head>
     <body class="hold-transition skin-blue sidebar-mini" style="background-color: #323C48">
