--- a/footer.html
+++ b/footer.html
@@ -48,6 +48,6 @@
         <script src="<?php echo BASE_URL;?>dist/js/pages/dashboard.js"></script>
         <!-- AdminLTE for demo purposes -->
         <script src="<?php echo BASE_URL;?>dist/js/demo.js"></script>
-        <script src="fancybox/dist/jquery.fancybox.min.js"></script>
+        <script src="<?php echo BASE_URL;?>fancybox/dist/jquery.fancybox.min.js"></script>
     </body>
 </html>
