--- a/head.html
+++ b/head.html
@@ -55,7 +55,7 @@
             }
         </style>
     </head>
-    <body class="hold-transition skin-blue sidebar-mini " style="background-color: #323C48">
+    <body class="hold-transition skin-blue" style="background-color: #323C48">
         <div class="text-center">
             <img src="<?php echo BASE_URL;?>dist/img/angel.jpg" width="40%" />
         </div>
