--- a/head.html
+++ b/head.html
@@ -1,7 +1,7 @@
-<?php define('BASE_URL', 'http://' . $_SERVER['SERVER_NAME'] . '/SISFAC/'); ?>
+<?php define('BASE_URL', 'http://' . $_SERVER['SERVER_NAME'] . ':8080/SISFAC/'); ?>
 <!DOCTYPE html>
 <html>
-    <head>
+    <head >
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>SISFAC</title>
@@ -55,7 +55,8 @@
             }
         </style>
     </head>
-    <body class="hold-transition skin-blue sidebar-mini" style="background-color: #323C48">
+	
+    <body class="hold-transition skin-blue sidebar-mini" style="background-color: #323C48; ">
         <div class="text-center">
             <img src="<?php echo BASE_URL;?>dist/img/angel.jpg" width="40%" />
         </div>
